--- a/src/main/resources/assets/lambdazation/lang/en_us.json
+++ b/src/main/resources/assets/lambdazation/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-	"item.lambdazation.lambda_crystal": "Lambda Crystal"
+	"item.lambdazation.lambda_crystal": "Lambda Crystal",
+	"itemGroup.lambdazation": "Lambdazation"
 }
