--- a/src/main/resources/assets/lambdazation/lang/en_us.json
+++ b/src/main/resources/assets/lambdazation/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+	"itemGroup.lambdazation": "Lambdazation",
 	"item.lambdazation.lambda_crystal": "Lambda Crystal",
-	"itemGroup.lambdazation": "Lambdazation"
+	"block.lambdazation.lambda_ore": "Lambda Ore"
 }
