--- a/src/main/resources/assets/lambdazation/lang/en_us.json
+++ b/src/main/resources/assets/lambdazation/lang/en_us.json
@@ -1,5 +1,6 @@
 {
 	"itemGroup.lambdazation": "Lambdazation",
 	"item.lambdazation.lambda_crystal": "Lambda Crystal",
+	"item.lambdazation.lens": "Lens",
 	"block.lambdazation.lambda_ore": "Lambda Ore"
 }
