--- a/src/main/resources/assets/lambdazation/lang/en_us.json
+++ b/src/main/resources/assets/lambdazation/lang/en_us.json
@@ -2,6 +2,7 @@
 	"itemGroup.lambdazation": "Lambdazation",
 	"item.lambdazation.lambda_crystal": "Lambda Crystal",
 	"item.lambdazation.lens": "Lens",
+	"item.lambdazation.calibrator": "Calibrator",
 	"block.lambdazation.lambda_ore": "Lambda Ore",
 	"block.lambdazation.crystallizer": "Crystallizer",
 	"entity.lambdazation.java": "Java",
