--- a/src/main/resources/assets/lambdazation/lang/en_us.json
+++ b/src/main/resources/assets/lambdazation/lang/en_us.json
@@ -6,6 +6,7 @@
 	"block.lambdazation.lambda_ore": "Lambda Ore",
 	"block.lambdazation.crystallizer": "Crystallizer",
 	"block.lambdazation.transformer": "Transformer",
+	"block.lambdazation.charger": "Charger",
 	"entity.lambdazation.java": "Java",
 	"entity.lambdazation.csharp": "CSharp",
 	"biome.lambdazation.music_valley": "Music Valley"
