--- a/src/main/resources/assets/lambdazation/lang/en_us.json
+++ b/src/main/resources/assets/lambdazation/lang/en_us.json
@@ -7,6 +7,7 @@
 	"block.lambdazation.crystallizer": "Crystallizer",
 	"block.lambdazation.transformer": "Transformer",
 	"block.lambdazation.charger": "Charger",
+	"block.lambdazation.reducer": "Reducer",
 	"entity.lambdazation.java": "Java",
 	"entity.lambdazation.csharp": "CSharp",
 	"biome.lambdazation.music_valley": "Music Valley"
