Add lambda block

--- a/src/main/resources/assets/lambdazation/lang/en_us.json
+++ b/src/main/resources/assets/lambdazation/lang/en_us.json
@@ -4,6 +4,7 @@
 	"item.lambdazation.lens": "Lens",
 	"item.lambdazation.calibrator": "Calibrator",
 	"block.lambdazation.lambda_ore": "Lambda Ore",
+	"block.lambdazation.lambda_block": "Lambda Block",
 	"block.lambdazation.crystallizer": "Crystallizer",
 	"block.lambdazation.transformer": "Transformer",
 	"block.lambdazation.charger": "Charger",
